--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
     <link rel="stylesheet" type="text/css" href="style.css">
     <h1 style="font-size:48"> ABC Health And Fitness </h1>
